Add further design and technical achievements

--- a/index.html
+++ b/index.html
@@ -1,35 +1,53 @@
 <html lang="en">
   <head>
     <title>CS4241 Assignment 1</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
   </head>
   <body>
     <h1>Information about Abigail Roane</h1>
-    <p>
-      Class of 2019
-    </p>
-    <p>
-      Computer Science Major
-    </p>
-    <p>
-      Computer Science courses taken:<br> Foundations, Databases I + II, Operating Systems, Software Engineering, Artificial Intelligence
-    </p>
-
-    <h2>Experience</h2>
-    <p>
-      HTML: a lot<br>
-      CSS: a lot<br>
-      Java: a lot<br>
-      Javascript: some<br>
-      Ruby: none<br>
-      Python: none<br>
-      unit testing: some<br><br>
-      Work Experience
-    </p>
-    <ul>
-      <li>MITRE</li>
-      <li>SystemOne</li>
-      <li>WPI</li>
-    </ul>
+    <div id="academics">
+        <h2>Academics</h2>
+        <p>
+          Class of 2019
+        </p>
+        <p>
+          Computer Science Major
+        </p>
+        <h3>
+          Courses Taken
+        </h3>
+        <ul>
+          <li>Foundations</li>
+          <li>Databases I + II</li>
+          <li>Operating Systems</li>
+          <li>Software Engineering</li>
+          <li>Artificial Intelligence</li>
+        </ul>
+    </div>
+    <div id="experience">
+      <h2>Experience</h2>
+      <p>
+        HTML: a lot<br>
+        CSS: a lot<br>
+        Java: a lot<br>
+        Javascript: some<br>
+        Ruby: none<br>
+        Python: none<br>
+        unit testing: some
+      </p>
+      <h3>Work Experience</h3>
+      <ul>
+        <li>MITRE</li>
+        <li>SystemOne</li>
+        <li>WPI</li>
+      </ul>
+    </div>
+    <div id="academics">
+      <h2>Extra Block</h2>
+    </div>
+    <div id="experience">
+        <h2>Extra Block</h2>
+    </div>
   </body>
 </html>
