--- a/index.html
+++ b/index.html
@@ -4,24 +4,20 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Cameron Maitland</h1>
     <p>
-      [Self introduction]
+      I'm currently completing my final term at WPI. I'm a Computer Science major who loves video games and netflix. In my free time I do video game cheat and bot development for several games. 
     </p>
     <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
+      Computer Science
     </p>
 
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
+
+    <h2>Work Experience</h2>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Software Development Intern, Polamer Precision</li>
+      <li>Math Tutor (Geometry, Algebra, and Calculus)</li>
+      <li>Landscaping</li>
     </ul>
   </body>
 </html>
