--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="CSS/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>CS4241 Assignment 1</title>
 </head>
 <style>
@@ -27,7 +27,7 @@ About Me
       <p>
         <table style="width:100%; border: 0px">
           <tr>
-                <th style="border: 0px !important"><img src="Images/selfie.jpg" alt="Sam Coache" align="center" width="275" height="275"></th>
+                <th style="border: 0px !important"><img src="images/selfie.jpg" alt="Sam Coache" align="center" width="275" height="275"></th>
                 <th style="border: 0px !important">
                   <h3>Bio</h3>
                   <p class="rescue">
