--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       and I was the first female on my high school's wrestling team. I spent the summer in Colorado for 
       an internship, and I climbed my first 14'er while I was there. I wanted to die. I am the pancake master.
     </p>
-    <button onClick="showVid()" type="button">Wanna see something cool?</button>
+    <div class="center">
+      <button onClick="showVid()" type="button">Wanna see something cool?</button>
+    </div>
     <div id="vidDiv" class="center" style="display:none;">
       <video width="320" height="240" controls>
         <source src="breaking bricks_Trim.mp4" type="video/mp4">
