--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <button onClick="showVid()" type="button">Wanna see something cool?</button>
     </div>
     <div id="vidDiv" class="center" style="display:none;">
-      <video width="320" height="240" style="margin:auto" controls>
+      <video width="50%" height="50%" style="margin:auto" controls>
         <source src="breaking bricks_Trim.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
