--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
 
     <h1 style="text-align:center">AMANDA PENNIE</h1>
     <h2 style="text-align:center">CLASS OF 2019</h2>
+    <img src="headshot.jpeg" alt="My Headshot">
     <br>
     <br>
 
     <h2 id="about-section">About Me</h2>
     <p>
-      I'm a Senior at WPI majoring in Computer Science with a Data Science minor. In my free time, I enjoy hiking, travelling, playing with my dog and trying new foods. 
+      Hi everyone, welcome to my website. <br> I'm a Senior at Worcester Polytechnic Institute majoring in Computer Science with a Data Science minor. <br> In my free time, I enjoy hiking, travelling, playing with my dog and trying new foods. 
     </p>
     <br>
     <br>
