Updated layout, moved social media images and links beneath my picture.  Added a Self Introduction section that I may delete.

--- a/index.html
+++ b/index.html
@@ -30,15 +30,12 @@
           text-align: left;
          }
 
-
-    p    {color: black;}
-
     .wrapper {
-        max-width: 800px;
-        margin-right: auto;
-        margin-left: auto;
-        padding: 5px;
-}
+          max-width: 800px;
+          margin-right: auto;
+          margin-left: auto;
+          padding: 5px;
+         }
 
     .profilepic {
           float: right;
@@ -48,25 +45,39 @@
           border-radius: 50%;
           padding: 20px;
          }
+    .socialmedia {
+          height: 50px;
+          margin-left: 11px;
+         }
     </style>
     <meta charset="utf-8">
   </head>
   <body>
   <div class="wrapper">
-    <p>
+    <div>
     <img class="profilepic" src="profilepic.jpg">
-    </p>
-    <p>
+    </div>
     <em>
     <h1>Trevor Weiler</h1>
     <h2>WPI Class of 2020</h2>
     <h3>Computer Science Major / Interactive Media and Game Development Minor</h3>
     </em>
-    <h4>Experience</h4>
-    </p>
+
+    <div style="float: right; padding-right: 30px; padding-bottom: 20px">
+      <a href="https://www.linkedin.com/in/trevor-weiler-92012214a/"><img class="socialmedia" src="linkedin.png" title="LinkedIn Page" alt="LinkedIn"></a>
+      <a href="https://www.facebook.com/trevor.weiler.7"><img class="socialmedia" src="facebook.png" title="Facebook Page" alt="Facebook"></a>
+      <a href="https://www.instagram.com/trevor_weiler/"><img class="socialmedia" src="instagram.png" title="Instagram Page" alt="Instagram"></a>
+    </div>
+
+    <h4>Self-Introduction</h4>
+    <div style= "float:left">
+      Hi my name is Trevor Weiler and I am a junior Computer Science Major at WPI.
+    </div>
+
+    <h4 style="padding-top: 50px">Experience</h4>
+
     <p>
       Previous Computer Science Courses I Have Taken at WPI
-    </p>
     <ul>
       <li>Introduction to Program Design</li>
       <li>Object-Oriented Program Design</li>
@@ -78,9 +89,9 @@
       <li>Operating Systems</li>
       <li>Software Engineering</li>
     </ul>
+    </p>
     <p>
       Experience with the Following Technologies and Methods
-    </p>
     <ul>
       <li>HTML - <i>some</i></li>
       <li>CSS - <i>some</i></li>
@@ -90,11 +101,8 @@
       <li>Python - <i>some</i></li>
       <li>unit testing - <i>some</i></li>
     </ul>
-    <p>
-      <a href="https://www.linkedin.com/in/trevor-weiler-92012214a/"><img src="linkedin.png" style="width:82px; height:86px" title="LinkedIn Page" alt="LinkedIn"></a>
-      <a href="https://www.facebook.com/trevor.weiler.7"><img src="facebook.png" style="width:82px; height:86px" title="Facebook Page" alt="Facebook"></a>
-      <a href="https://www.instagram.com/trevor_weiler/"><img src="instagram.png" style="width:82px; height:86px" title="Instagram Page" alt="Instagram"></a>
     </p>
+
  </div>
   </body>
 </html>
