--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>Information about Jack Palmstrom</h1>
+<h1 style="align-content: center">Information about Jack Palmstrom</h1>
   <div>
     <ul>
       <li><a href="index.html">Home</a> </li>
