created a centered css class & applied to headers

--- a/wpiExperience.html
+++ b/wpiExperience.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h2>Computer Science Experience at WPI</h2>
+<h2 class="centered">Computer Science Experience at WPI</h2>
 
 <div>
     <ul>
