created a centered css class & applied to headers

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1 class="centered">Information about Jack Palmstrom</h1>
+<h1 class="centered" style="text-align: center">Information about Jack Palmstrom</h1>
   <div>
     <ul>
       <li><a href="index.html">Home</a> </li>
