Added self introduction paragraph and fixed spacing issues

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           font-family: verdana;
           font-size: 100%;
           text-align: left;
+          padding-top: 30px;
          }
 
     .wrapper {
@@ -70,11 +71,11 @@
     </div>
 
     <h4>Self-Introduction</h4>
-    <div style= "float:left">
-      Hi my name is Trevor Weiler and I am a junior Computer Science Major at WPI.
+    <div style= "float:left; padding-bottom: 20px">
+      Hi my name is Trevor Weiler, and I am a junior Computer Science Major and Interactive Media and Game Development Minor at Worcester Polytechnic Institute.  I enjoy food, movies, music, concerts and rollercoasters.  My hobbies include spending way too much money on all of those things with my friends and family, as well as mindlessly scrolling through social media for hours. (Connect, Friend and Follow Me!)
     </div>
 
-    <h4 style="padding-top: 50px">Experience</h4>
+    <h4>Experience</h4>
 
     <p>
       Previous Computer Science Courses I Have Taken at WPI
