created a centered css class & applied to headers

--- a/workExp.html
+++ b/workExp.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h2 class="centered">Work Experience</h2>
+<h2 class="centered" style="text-align: center">Work Experience</h2>
 
 <div>
     <ul>
