--- a/wpiExperience.html
+++ b/wpiExperience.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h2 class="centered">Computer Science Experience at WPI</h2>
+<h2 class="centered" style="text-align: center">Computer Science Experience at WPI</h2>
 
 <div>
     <ul>
