--- a/index.html
+++ b/index.html
@@ -2,26 +2,155 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One">
+    <link rel="stylesheet" href="assets/css/styles.css">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
-    <p>
-      [Self introduction]
-    </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
-    </p>
+    <header class="mainHeader">
+        <div>
+            <div class="container">
+                <h1 class="text-center heading1" style="padding-bottom:10px;">Information about&nbsp;</h1>
+                <h2 class="text-center heading2">Patrick Braun</h2>
+            </div>
+        </div>
+    </header><img src="assets/img/toggle_profilbild.png" class="mx-auto d-block profileimage rounded-circle">
+    <section>
+        <div class="container information">
+            <div class="row">
+                <div class="col-12 col-md-6 col-xs-12">
+                    <h3>General Information</h3>
+                    <p>Hi everyone, I'm Patrick. I am an exchange student from Germany and I'm a CS major. I like to play guitar, meet people around the world, go out with friends and also enjoy snowboarding.</p>
+				</div>
+                <div class="col-12 col-md-6">
+                    <h3>Major</h3>
+                    <p>I am a Computer Science Major and I love to learn something new.</p>
+                </div>
+            </div>
+            <div class="row" style="margin-bottom:40px;">
+                <div class="col-12 col-md-12 col-xs-12">
+                    <h3>Hobbies</h3>
+                    <p>I love to travel around and meet some People around the world. Furthermore I love to play guitar or just go out with my friends.</p>
+                    <div class="row">
+                        <div class="col-md-8 col-lg-8 col-xl-8 offset-md-2 offset-lg-2">
+                            <div class="carousel slide" data-ride="carousel" id="carousel-1">
+                                <div class="carousel-inner" role="listbox">
+                                    <div class="carousel-item active">
+										<img class="w-100 d-block" src="assets/img/australia3.png" alt="Slide Image">
+									</div>
+                                    <div class="carousel-item">
+										<img class="w-100 d-block" src="assets/img/australia2.png" alt="Slide Image">
+									</div>
+                                    <div class="carousel-item">
+										<img class="w-100 d-block" src="assets/img/australia1.png" alt="Slide Image">
+									</div>
+                                    <div class="carousel-item">
+										<img class="w-100 d-block" src="assets/img/tasmania.png" alt="Slide Image">
+									</div>
+                                </div>
+                                <div>
+									<a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev">
+										<span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span>
+									</a>
+									<a class="carousel-control-next" href="#carousel-1" role="button" data-slide="next">
+										<span class="carousel-control-next-icon"></span>
+										<span class="sr-only">Next</span>
+									</a>
+								</div>
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carousel-1" data-slide-to="1"></li>
+                                    <li data-target="#carousel-1" data-slide-to="2"></li>
+                                    <li data-target="#carousel-1" data-slide-to="3"></li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Experience</h2>
+                </div>
+                <div class="col-12 col-md-6">
+                    <h4>Work Experience</h4>
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Company</th>
+                                    <th>Job-Title</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>BMW Munich</td>
+                                    <td>Internship (IT-Projectmanagement)</td>
+                                </tr>
+                                <tr>
+                                    <td>Cortex Software</td>
+                                    <td>Working Student (IT-Projectmanagement)</td>
+                                </tr>
+                                <tr>
+                                    <td>Herrenknecht AG</td>
+                                    <td>IT-Specialist (Network Administrator, IT-Projectmanagement)</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <h4>General Experience</h4>
+                    <p>I have some experience with the following technologies and methods:</p>
+                    <div class="table-responsive">
+                        <table class="table">
+                            <tbody>
+                                <tr>
+                                    <td>HTML</td>
+                                    <td>SOME</td>
+                                </tr>
+                                <tr>
+                                    <td>CSS</td>
+                                    <td>SOME</td>
+                                </tr>
+                                <tr>
+                                    <td>Java</td>
+                                    <td>A LOT</td>
+                                </tr>
+								<tr>
+                                    <td>JavaScript</td>
+                                    <td>SOME</td>
+                                </tr>
+								<tr>
+                                    <td>C/C#</td>
+                                    <td>SOME (long time ago)</td>
+                                </tr>
+								<tr>
+                                    <td>SQL</td>
+                                    <td>A LOT</td>
+                                </tr>
+								<tr>
+                                    <td>Ruby</td>
+                                    <td>NONE</td>
+                                </tr>
+								<tr>
+                                    <td>Python</td>
+                                    <td>NONE</td>
+                                </tr>
+								<tr>
+                                    <td>UNIT Testing</td>
+                                    <td>SOME</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+	<footer class="footer1"></footer>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+</body>
 
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
-  </body>
 </html>
