--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
       document.getElementById("footerImage").addEventListener("touch", function() {
         changeMode();
       });
-      document.getElementById("footerImage").addEventListener("click", function() {
+      /*document.getElementById("footerImage").addEventListener("click", function() {
         changeMode();
-      });
+      });*/
     </script>
   </body>
 </html>
