fixing mobile test

--- a/index.html
+++ b/index.html
@@ -67,12 +67,9 @@
     </div>
     <div id="footerImage"></div>
     <script>
-      document.getElementById("footerImage").addEventListener("touch", function() {
+      document.getElementById("footerImage").addEventListener("click", function() {
         changeMode();
       });
-      /*document.getElementById("footerImage").addEventListener("click", function() {
-        changeMode();
-      });*/
     </script>
   </body>
 </html>
