created a centered css class & applied to headers

--- a/wpiExperience.html
+++ b/wpiExperience.html
@@ -18,10 +18,23 @@
 </div>
 
 <p>
-    Major: Computer Science
+    <b>Major:</b> Computer Science
 </p>
 <p>
-    Previous computer science courses at WPI: CS 1101, CS 2102, CS 2301, CS 2022, CS 2011, CS 2223, CS 3013, CS 3733, CS 3043, CS 3041, CS 3431
+    <b>Previous computer science courses at WPI:</b>
+    <ul>
+    <li>CS 1101</li>
+    <li>CS 2102</li>
+    <li>CS 2301</li>
+    <li>CS 2022</li>
+    <li>CS 2011</li>
+    <li>CS 2223</li>
+    <li>CS 3013</li>
+    <li>CS 3733</li>
+    <li>CS 3041</li>
+    <li>CS 3043</li>
+    <li>CS 3431</li>
+    </ul>
 </p>
 
 </body>
