Add Files to Repository

--- a/index.html
+++ b/index.html
@@ -1,27 +1,79 @@
 <html lang="en">
-  <head>
+<head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-  </head>
-  <body>
-    <h1>Information about [Your name here]</h1>
-    <p>
-      [Self introduction]
-    </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
-    </p>
-
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
-  </body>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
+</head>
+<body>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="card col-lg-8 col-sm-10">
+            <img src="profile.jpg" alt="Timon" id="profile_image">
+            <div id="basics">
+                <h1>Timon Millich</h1>
+                <p class="title">Exchange Student</p>
+                <p>University Constance: Technik, Wirtschaft und Gestaltung</p>
+            </div>
+            <div id="major">
+                <h2>Major: Computer Science</h2>
+                My experience with the following technologies and methods:
+                <table id="experience" class="table table-striped">
+                    <tr>
+                        <td>HTML</td>
+                        <td>We allready had courses in Germany where we learned the Basics of HTML. (Some)</td>
+                    </tr>
+                    <tr>
+                        <td>CSS</td>
+                        <td>My creativity is not so good, but I know some CSS commands. (Some)</td>
+                    </tr>
+                    <tr>
+                        <td>JAVA</td>
+                        <td>Long Experience. (A lot)</td>
+                    </tr>
+                    <tr>
+                        <td>JavaScript</td>
+                        <td>Basics. I can do an ajax call. (Some)</td>
+                    </tr>
+                    <tr>
+                        <td>C/C#</td>
+                        <td>I had expirience but it is a long time ago. (Some)</td>
+                    </tr>
+                    <tr>
+                        <td>SQL</td>
+                        <td>Good experience. (A lot)</td>
+                    </tr>
+                    <tr>
+                        <td>Ruby</td>
+                        <td>None</td>
+                    </tr>
+                    <tr>
+                        <td>Python</td>
+                        <td>None</td>
+                    </tr>
+                    <tr>
+                        <td>unit testing</td>
+                        <td>Some</td>
+                    </tr>
+                </table>
+                <p>I allready worked on Websites in my internship. I know the Basics of HTML, CSS and JavaScript.<br>
+                    Also I worked with Spring and Angular.</p>
+            </div>
+            <div id="working_experience">
+                <h2>Working experience</h2>
+                <ul>
+                    <li>DoubleSlash</li>
+                    <li>HTWG Constance</li>
+                    <li>WPI</li>
+                </ul>
+            </div>
+            <a href="mailto:tmillich@wpi.edu" target="_blank" class="button">Contact</a>
+        </div>
+    </div>
+</div>
+</body>
 </html>
