Added some styles like bold and centered

--- a/workExp.html
+++ b/workExp.html
@@ -17,10 +17,10 @@
     </ul>
 </div>
 
-<p>
-    Experience in: (none, some, a lot)
+<p class="centered" style="text-align: center">
+    <b>Experience in:</b> (none, some, a lot)
 </p>
-<ul>
+<ul class="centered" style="text-align: center">
     <li>HTML: some</li>
     <li>CSS: some</li>
     <li>Java: a lot</li>
