--- a/wpiExperience.html
+++ b/wpiExperience.html
@@ -17,10 +17,10 @@
     </ul>
 </div>
 
-<p>
+<p class="centered" style="text-align: center">
     <b>Major:</b> Computer Science
 </p>
-<p>
+<p class="centered" style="text-align: center">
     <b>Previous computer science courses at WPI:</b>
     <ul>
     <li>CS 1101</li>
