Fix more layout and design issues.  Happy with this look.  Goal was to fit it all in one page with no scroll bar required.  Accomplished this on my own computer screen, not certain about all computers.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
           text-align: left;
           padding-top: 30px;
          }
+    i   {
+          float: right;
+          padding-left: 10px;
+         }
 
     .wrapper {
           max-width: 800px;
@@ -76,10 +80,10 @@
     </div>
 
     <h4>Experience</h4>
-
-    <p>
-      Previous Computer Science Courses I Have Taken at WPI
-    <ul>
+    <div style="float:left">
+      CS Courses:
+    </div>
+    <ul style="float: left">
       <li>Introduction to Program Design</li>
       <li>Object-Oriented Program Design</li>
       <li>Discrete Mathematics</li>
@@ -90,19 +94,18 @@
       <li>Operating Systems</li>
       <li>Software Engineering</li>
     </ul>
-    </p>
-    <p>
-      Experience with the Following Technologies and Methods
-    <ul>
-      <li>HTML - <i>some</i></li>
-      <li>CSS - <i>some</i></li>
-      <li>Java - <i>a lot</i></li>
-      <li>JavaScript - <i>none</i></li>
-      <li>Ruby - <i>none</i></li>
-      <li>Python - <i>some</i></li>
-      <li>unit testing - <i>some</i></li>
+    <div style="float:left">
+      Technologies and Methods:
+    </div>
+    <ul style="float: left">
+      <li>HTML: <i>some</i></li>
+      <li>CSS: <i>some</i></li>
+      <li>Java: <i>a lot</i></li>
+      <li>JavaScript: <i>none</i></li>
+      <li>Ruby: <i>none</i></li>
+      <li>Python: <i>some</i></li>
+      <li>unit testing: <i>some</i></li>
     </ul>
-    </p>
 
  </div>
   </body>
