Added some styles like bold and centered

--- a/wpiExperience.html
+++ b/wpiExperience.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:list-style="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Jack's WPI Experience</title>
@@ -22,7 +22,7 @@
 </p>
 <p class="centered" style="text-align: center">
     <b>Previous computer science courses at WPI:</b>
-    <ul class="centered" style="text-align: center">
+    <ul list-style: none;>
     <li>CS 1101</li>
     <li>CS 2102</li>
     <li>CS 2301</li>
