Added some styles like bold and centered

--- a/wpiExperience.html
+++ b/wpiExperience.html
@@ -22,7 +22,7 @@
 </p>
 <p class="centered" style="text-align: center">
     <b>Previous computer science courses at WPI:</b>
-    <ul list-style: none;>
+    <ul style="list-style: none">
     <li>CS 1101</li>
     <li>CS 2102</li>
     <li>CS 2301</li>
