--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,17 @@
 <style>
 </style>
   <body>
-    <h1>World Of Sam Coache</h1><br>
+    <div style="background-color: #52afc0; width:100%; padding-top: 1px; padding-bottom:1px">
+    <p style="">
+      <h1 style="padding-left:10px; padding-top:0px; text-align:left; display:inline">Sam Coache</h1>, Computer Science Major, Cybersecurity Focused
+    </p>
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#home">About Me</a></li>
       <li><a data-toggle="tab" href="#Prof_Tab">Professional Experience</a></li>
       <li><a data-toggle="tab" href="#menu2">Projects</a></li>
       <li><a data-toggle="tab" href="#menu3">Additional Assignment Requirements</a></li>
     </ul>
+    </div>
     <div class="tab-content">
 <!--
 Code for pane 1 (home)
