--- a/workExp.html
+++ b/workExp.html
@@ -20,7 +20,7 @@
 <p class="centered" style="text-align: center">
     <b>Experience in:</b> (none, some, a lot)
 </p>
-<ul class="centered" style="text-align: center">
+<ul class="centered" style="list-style: none; text-align: center">
     <li>HTML: some</li>
     <li>CSS: some</li>
     <li>Java: a lot</li>
