erika is a moron

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Information about Erika Snow</h1>
-    <img src="Erika in Utah.jpeg" alt="Erika" style="width:50%;height:50%;" class="center">
+    <img src="erika.jpeg" alt="Erika" style="width:50%;height:50%;" class="center">
     <p>
       I'm a senior (Class of 2019) studying Robotics Engineering and Computer Science. I'm from Foxborough
       MA, but despite living where the Patriot's play, I couldn't care less about football. I have an older
@@ -25,7 +25,7 @@
     </div>
     <div id="vidDiv" class="center" style="display:none;">
       <video width="540" height="360" controls>
-        <source src="breaking bricks_Trim.mp4" type="video/mp4">
+        <source src="bricks.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
