Added some styles like bold and centered

--- a/workExp.html
+++ b/workExp.html
@@ -9,7 +9,7 @@
 <h2 class="centered" style="text-align: center">Work Experience</h2>
 
 <div>
-    <ul>
+    <ul style="list-style: none">
         <li><a href="index.html">Home</a> </li>
         <li><a href="bio.html">Personal Info</a></li>
         <li><a href="wpiExperience.html">WPI Eduction</a></li>
