--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 <h1 class="centered" style="text-align: center">Jack Palmstrom</h1>
   <div>
-    <ul>
+    <ul style="list-style: none">
       <li><a href="index.html">Home</a> </li>
-    <li><a href="bio.html">Personal Info</a></li>
-    <li><a href="wpiExperience.html">WPI Eduction</a></li>
-    <li><a href="workExp.html">Work Experience</a></li>
+      <li><a href="bio.html">Personal Info</a></li>
+      <li><a href="wpiExperience.html">WPI Eduction</a></li>
+      <li><a href="workExp.html">Work Experience</a></li>
     </ul>
   </div>
 
