Added some styles like bold and centered

--- a/workExp.html
+++ b/workExp.html
@@ -10,7 +10,7 @@
 
 <div>
     <ul style="list-style: none">
-        <li><a href="index.html">Home</a> </li>
+        <li><a style="h" href="index.html">Home</a> </li>
         <li><a href="bio.html">Personal Info</a></li>
         <li><a href="wpiExperience.html">WPI Eduction</a></li>
         <li><a href="workExp.html">Work Experience</a></li>
