Cleaned up the html code a little, fixed some quick errors in self introduction and added comment to give credit to my ideas and knowledge.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
           color: darkred;
           font-family: verdana;
           font-size: 300%;
+          font-style: italic;
           text-align: center;
          }
     h2   {
           color: darkred;
           font-family: verdana;
           font-size: 200%;
+          font-sty;e: italic;
           text-align: center;
          }
     h3   {
           color: darkred;
           font-family: verdana;
           font-size: 130%;
+          font-style: italic;
           text-align: center;
          }
     h4   {
@@ -30,7 +33,7 @@
           text-align: left;
           padding-top: 30px;
          }
-    i   {
+    i    {
           float: right;
           padding-left: 10px;
          }
@@ -57,16 +60,19 @@
     </style>
     <meta charset="utf-8">
   </head>
+
   <body>
+
+  <!-- Credit to Professor Harrison's website for the inspiration behind my website, as well as w3schools.com for assisting me in creating it. -->
   <div class="wrapper">
+
     <div>
     <img class="profilepic" src="profilepic.jpg">
     </div>
-    <em>
+
     <h1>Trevor Weiler</h1>
     <h2>WPI Class of 2020</h2>
     <h3>Computer Science Major / Interactive Media and Game Development Minor</h3>
-    </em>
 
     <div style="float: right; padding-right: 30px; padding-bottom: 20px">
       <a href="https://www.linkedin.com/in/trevor-weiler-92012214a/"><img class="socialmedia" src="linkedin.png" title="LinkedIn Page" alt="LinkedIn"></a>
@@ -76,7 +82,7 @@
 
     <h4>Self-Introduction</h4>
     <div style= "float:left; padding-bottom: 20px">
-      Hi my name is Trevor Weiler, and I am a junior Computer Science Major and Interactive Media and Game Development Minor at Worcester Polytechnic Institute.  I enjoy food, movies, music, concerts and rollercoasters.  My hobbies include spending way too much money on all of those things with my friends and family, as well as mindlessly scrolling through social media for hours. (Connect, Friend and Follow Me!)
+      Hi, my name is Trevor Weiler, and I am a junior Computer Science Major and Interactive Media and Game Development Minor at Worcester Polytechnic Institute.  I enjoy food, movies, music, concerts and rollercoasters.  My hobbies include spending way too much money on all of those things with my friends and family, as well as mindlessly scrolling through social media for hours. (Connect, Friend and Follow Me!)
     </div>
 
     <h4>Experience</h4>
@@ -107,6 +113,6 @@
       <li>unit testing: <i>some</i></li>
     </ul>
 
- </div>
+  </div>
   </body>
 </html>
