--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       <li><a href="workExp.html">Work Experience</a></li>
     </ul>
   </div>
-
+<img style="align-content: center" src="ProfilePicture.jpg">
 </body>
 </html>
