--- a/index.html
+++ b/index.html
@@ -1,42 +1,46 @@
 <html lang="en">
-  <head>
-    <title>CS4241 Assignment 1</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <h1>Information about James Kenney</h1>
-    <p>
-        I am a Computer Science major, class of 2019. In my free time, I enjoy skiing and sailing.
-    </p>
-    <h2>Previous CS courses</h2>
-    <ul>
-        <li>CS 1101</li>
-        <li>CS 2102</li>
-        <li>CS 2303</li>
-        <li>CS 2022</li>
-        <li>CS 2223</li>
-        <li>CS 2011</li>
-        <li>CS 3013</li>
-        <li>CS 3431</li>
-        <li>CS 3733</li>
-        <li>CS 4513</li>
-        <li>CS 4120</li>
-    </ul>
-    <h2>Experience</h2>
-    <h3>Class Technologies</h3>
-    <ul>
-        <li>HTML - None</li>
-        <li>CSS - Some</li>
-        <li>Java - Lots</li>
-        <li>JavaScript - None</li>
-        <li>Ruby - None</li>
-        <li>Python - Some</li>
-        <li>Unit testing - Some</li>
-    </ul>
-    <h3>Work Experience</h3>
-    <ul>
-        <li>Sierra Olympic Technologies</li>
-        <li>Hood Technology Mechanical</li>
-    </ul>
-  </body>
+    <head>
+        <title>CS4241 Assignment 1</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Nunito" rel="stylesheet">
+    </head>
+    <body class="backdrop">
+    <div class="body">
+        <h1>Information about James Kenney</h1>
+        <p>
+            I am a Computer Science major, class of 2019. In my free time, I enjoy skiing and sailing.
+        </p>
+        <h2>Previous CS courses</h2>
+        <ul>
+            <li>CS 1101</li>
+            <li>CS 2102</li>
+            <li>CS 2303</li>
+            <li>CS 2022</li>
+            <li>CS 2223</li>
+            <li>CS 2011</li>
+            <li>CS 3013</li>
+            <li>CS 3431</li>
+            <li>CS 3733</li>
+            <li>CS 4513</li>
+            <li>CS 4120</li>
+        </ul>
+        <h2>Experience</h2>
+        <h3>Class Technologies</h3>
+        <ul>
+            <li>HTML - None</li>
+            <li>CSS - Some</li>
+            <li>Java - Lots</li>
+            <li>JavaScript - None</li>
+            <li>Ruby - None</li>
+            <li>Python - Some</li>
+            <li>Unit testing - Some</li>
+        </ul>
+        <h3>Work Experience</h3>
+        <ul>
+            <li>Sierra Olympic Technologies</li>
+            <li>Hood Technology Mechanical</li>
+        </ul>
+    </div>
+    </body>
 </html>
