--- a/index.html
+++ b/index.html
@@ -1,63 +1,7 @@
 <html lang="en">
   <head>
     <title>CS4241 Assignment 1</title>
-    <style>
-    body {
-          background-color: whitesmoke;
-         }
-    h1   {
-          color: darkred;
-          font-family: verdana;
-          font-size: 300%;
-          font-style: italic;
-          text-align: center;
-         }
-    h2   {
-          color: darkred;
-          font-family: verdana;
-          font-size: 200%;
-          font-sty;e: italic;
-          text-align: center;
-         }
-    h3   {
-          color: darkred;
-          font-family: verdana;
-          font-size: 130%;
-          font-style: italic;
-          text-align: center;
-         }
-    h4   {
-          color: black;
-          font-family: verdana;
-          font-size: 100%;
-          text-align: left;
-          padding-top: 30px;
-         }
-    i    {
-          float: right;
-          padding-left: 10px;
-         }
-
-    .wrapper {
-          max-width: 800px;
-          margin-right: auto;
-          margin-left: auto;
-          padding: 5px;
-         }
-
-    .profilepic {
-          float: right;
-          height: 200px;
-          margin-left: 32px;
-          margin-bottom: 16px;
-          border-radius: 50%;
-          padding: 20px;
-         }
-    .socialmedia {
-          height: 50px;
-          margin-left: 11px;
-         }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="utf-8">
   </head>
 
