--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       background-color: #000000;
       color: white;
       padding: 10px 24px;
-      float: left;
+      float: center;
     }
     /* this prevents double borders */
     .btn-group button:not(:last-child) {
@@ -82,15 +82,15 @@
         <input id="slider" disabled="true" type="range" min="1" max="100" value="50" class="slider">
       </div>
       <div class="btn-group">
-        <btn onmouseover="sliderAdjust(25, &quot;SOME&quot;)" onmouseout="reset()">HTML</btn>
-        <btn onmouseover="sliderAdjust(10, &quot;NONE&quot;)" onmouseout="reset()">CSS</btn>
-        <btn onmouseover="sliderAdjust(85, &quot;A LOT&quot;)" onmouseout="reset()">Java</btn>
-        <btn onmouseover="sliderAdjust(40, &quot;SOME&quot;)" onmouseout="reset()">JavaScript</btn>
+        <button onmouseover="sliderAdjust(25, &quot;SOME&quot;)" onmouseout="reset()">HTML</button>
+        <button onmouseover="sliderAdjust(10, &quot;NONE&quot;)" onmouseout="reset()">CSS</button>
+        <button onmouseover="sliderAdjust(85, &quot;A LOT&quot;)" onmouseout="reset()">Java</button>
+        <button onmouseover="sliderAdjust(40, &quot;SOME&quot;)" onmouseout="reset()">JavaScript</button>
       </div>
       <div class="btn-group">
-        <btn onmouseover="sliderAdjust(5, &quot;NONE&quot;)" onmouseout="reset()">Ruby</btn>
-        <btn onmouseover="sliderAdjust(75, &quot;A LOT&quot;)" onmouseout="reset()">Python</btn>
-        <btn onmouseover="sliderAdjust(70, &quot;A LOT&quot;)" onmouseout="reset()">Unit Testing</btn>
+        <button onmouseover="sliderAdjust(5, &quot;NONE&quot;)" onmouseout="reset()">Ruby</button>
+        <button onmouseover="sliderAdjust(75, &quot;A LOT&quot;)" onmouseout="reset()">Python</button>
+        <button onmouseover="sliderAdjust(70, &quot;A LOT&quot;)" onmouseout="reset()">Unit Testing</button>
       </div>
       <!-- /*
       <ul>
