--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       <li><a href="workExp.html">Work Experience</a></li>
     </ul>
   </div>
-<img src="ProfilePicture.jpg" align="middle">
+<img align="middle" class="" style="text-align: center; align-content: center" src="ProfilePicture.jpg">
 </body>
 </html>
