--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <li><a href="workExp.html">Work Experience</a></li>
     </ul>
   </div>
-<img align="middle" class="" style="text-align: center; align-content: center" src="ProfilePicture.jpg">
+<center>
+<img src="ProfilePicture.jpg">
+</center>
 </body>
 </html>
