Unfinished push to Heroku

--- a/index.html
+++ b/index.html
@@ -3,32 +3,80 @@
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arvo">
-    <link rel="stylesheet" type="text/css" href="A1styles.css">
+    <link rel="stylesheet" type="text/css" href="a1styles.css">
   </head>
   <body>
     <div class="module" id="page-content">
       <div class="header" id="self-header">Information about Adam Camilli</div>
       <div class="content" id="self-content">
 	<p>
-	  [Self introduction]
+	  Hello! I am a senior majoring in CS and minoring in Spanish (WPI class of 2019). 
+	  I’m the vice president of the WPI sailing team, and try to go on hikes with the outing club 
+	  when I can. In my spare time I enjoy working out, listening to as much new music as possible,
+	  and playing guitar and video games.
 	</p>
 	<p>
-	  [Major and other information]
-	</p>
-	<p>
-	  [Other things]
+	  As a senior I've taken a number of CS courses in my time at WPI:
+	  <ul>	    
+	    <li>CS 1102: Accel. Intro to Program Design</li>
+	    <li>CS 2102: Obj.-Oriented Design Concepts</li>
+	    <li>CS 2223: Algorithms</li>
+	    <li>CS 2303: Systems Prog. Concepts</li>
+	    <li>CS 2022: Discrete </li>
+	    <li>CS 2011: Mach. Org & Assembly</li>
+	    <li>CS 3133: Foundations of CS</li>
+	    <li>CS 3431: Database I</li>
+	    <li>CS 3733: Soft. Eng.</li>
+	    <li>CS 3013: OS</li>
+	    <li>CS 3516: Computer Networks</li>
+	    <li>CS 4513: Dist. Systems</li>
+	    <li>CS 4341: AI</li>
+	    <li>CS 4120: Analysis of Algorithms</li>
+	  </ul>
 	</p>
       </div>
       <div class="header" id="exp-header">Experience</div>
       <div class="content" id="exp-content">
 	<p>
-	  Working experience
+	  Working experience:
+	  <ul>
+	    <li><a href="https://www.tallan.com/">Tallan</a></li>
+	    <li>WPI</li>
+	  </ul>
 	</p>
-	<ul>
-	  <li>IBM/Rational</li>
-	  <li>WPI</li>
-	</ul>
+	<p>
+	  I also have experience with the following technologies and methods:
+	  <dl>
+	    <dt><strong>HTML, CSS, and JS:</strong> <em>Some - A lot</em></dt>
+	    <dd>From internships + playing with browser tools</dd>
+	    <dt><strong>Java:</strong> <em>A lot</em> </dt> 
+	    <dd>My first programming language</dd>
+	    <dt><strong>Python:</strong> <em>Some - A lot</em></dt> 
+	    <dd>2 and 3</dd>
+	    <dt><strong>Ruby:</strong> <em>None - Some</em></dt> 
+	    <dd>Haven't needed it so far, but find it interesting</dd>
+	    <dt><strong>Unit testing:</strong> <em>Some-A lot</em> </dt> 
+	    <dd>Courses at WPI + internships + testing fun projects</dd>
+	  </dl>
+	</p>
+      </div>
+      <div class="header" id="quiz-header">A fun animated quiz on Adam</div>
+      <div class="content" id="quiz-content">
+	<div id="question-panel"></div>
+	<div id="choices">
+	  <!-- Multiple choice -->
+	  <button id="choice1"></button>
+	  <button id="choice2"></button>
+	  <button id="choice3"></button>
+	  <button id="choice4"></button>
+	  <!-- True/False -->
+	  <button id="choice-true"></button>
+	  <button id="choice-false"></button>
+	</div>
+	<button id="submit">New Question</button>
       </div>
     </div>
+    <!-- Scripts -->
+    <script type="text/javascript" src="a1scripts.js"></script>
   </body>
 </html>
