--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
     </div>
     <div class = "box2"
         <p>
-          Class of 2019
+          Hi there! My name is Sydney Hurley.
+          I am currently a senior attending Worcester Polytechnic Institute.
+          I am pursuing a double major in Biomedical Engineering and Professional
+          Writing in additon to a minor in Computer Science.
         </p>
-        <p>
-          Double Major in Biomedical Engineering and Professional Writing
-        </p>
-
-        <p>
-          Minor in Computer Science
-        </p>
-
       </div>
 
       <div class = "box3">
 
-        <h2>Experience</h2>
+        <h2>Experience with Computer Science</h2>
         <p>
-          Previous CS Classes at WPI: CS1001, CS2119, CS3043
-        </p>
+         Here is a list of the Previous CS Classes I have completed at WPI:
+        <ul>
+          <li> CS1001 - Introduction to Programming
+          <li> CS2119 - Building Applications using Object Oriented Concepts
+          <l1> CS3043 - Social Implications of idk what the rest was called
+        </ul>
+      </p>
+
         <p>
+          Here is a list of my experience with the following technologies and methods:
         <ul>
           <li>HTML - none </li>
           <li>CSS - none </li>
