--- a/index.html
+++ b/index.html
@@ -49,51 +49,51 @@
             <table cellpadding="0" cellspacing="0" border="0">
                 <tbody>
                 <tr>
-                    <td>CS 1101</td>
+                    <td><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_1101">CS 1101</a></td>
                     <td>Introduction to Program Design</td>
                 </tr>
                 <tr>
-                    <td>CS 2102</td>
+                    <td><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2102">CS 2102</a></td>
                     <td>Object-Oriented Design Concepts</td>
                 </tr>
                 <tr>
-                    <td>CS 2303</td>
+                    <td><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2303">CS 2303</a></td>
                     <td>Systems Programming Concepts</td>
                 </tr>
                 <tr>
-                    <td>CS 2011</td>
+                    <td><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2011">CS 2011</a></td>
                     <td>Introduction to Machine Organization and Assembly Language</td>
                 </tr>
                 <tr>
-                    <td>CS 2223</td>
+                    <td><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2223">CS 2223</a></td>
                     <td>Algorithms</td>
                 </tr>
                 <tr>
-                    <td>CS 3013</td>
+                    <td><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3013">CS 3013</a></td>
                     <td>Operating Systems</td>
                 </tr>
                 <tr>
-                    <td>CS 3133</td>
+                    <td><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3133">CS 3133</a></td>
                     <td>Foundations of Computer Science</td>
                 </tr>
                 <tr>
-                    <td>CS 3431</td>
+                    <td><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3431">CS 3431</a></td>
                     <td>Database Systems I</td>
                 </tr>
                 <tr>
-                    <td>CS 3516</td>
+                    <td><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3516">CS 3516</a></td>
                     <td>Computer Networks</td>
                 </tr>
                 <tr>
-                    <td>CS 3733</td>
+                    <td><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3733">CS 3733</a></td>
                     <td>Software Engineering</td>
                 </tr>
                 <tr>
-                    <td>CS 4401</td>
+                    <td><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_4401">CS 4401</a></td>
                     <td>Software Security Engineering</td>
                 </tr>
                 <tr>
-                    <td>CS 453X</td>
+                    <td><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_453X">CS 453X</a></td>
                     <td>Machine Learning</td>
                 </tr>
                 </tbody>
