text box size edited

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul>
           <li> CS1001 - Introduction to Programming
           <li> CS2119 - Building Applications using Object Oriented Concepts
-          <l1> CS3043 - Social Implications of idk what the rest was called
+          <li> CS3043 - Social Implications of idk what the rest was called
         </ul>
       </p>
 
