--- a/index.html
+++ b/index.html
@@ -1,26 +1,77 @@
 <html lang="en">
-  <head>
+<head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-  </head>
-  <body>
-    <h1>Information about [Yifei Jin]</h1>
-    <p>
-      [I am class of 2019]
-    </p>
-    <p>
-      [I am computer science major and data science minor]
-    </p>
-    <p>
-    [I have taken many computer science classes at WPI including OS, OOAD, ML and etc..]
-    </p>
+    <style>
+        body {
+            background-image: url("images/background.jpeg");
+            font-family: Courier;
+        }
 
-    <h2>Experience</h2>
+        #div1, #div2 {
+            text-align: center;
+        }
+
+        #WPI_logo {
+            position: absolute;
+            top: 50;
+            left: 900;
+            width: 80px;
+            height: 80px;
+        }
+
+        #prog {
+            width: 30%;
+            height: 30%;
+        }
+
+    </style>
+</head>
+
+<body>
+<div id="div1">
+    <h1>Learn About Me, Yifei Jin</h1>
     <p>
-     I had one internship and I am more familiar with Java and python. 
+        I am class of 2019 at <a href="https://www.wpi.edu">WPI</a>
+        <img src="images/WPI_logo.png" alt="WPI_logo" id="WPI_logo">
+        <br/>
+        I am computer science major and data science minor<br/>
     </p>
-    <ul>
-      <li>WPI</li>
-    </ul>
-  </body>
+</div>
+
+<h2>Classes I have taken:</h2>
+<ul>
+    <li>Software Engineering</li>
+    <li>Operating Systems</li>
+    <li>Analysis of Algorithm</li>
+    <li>Database</li>
+    <li>Object-oriented Analysis and Design</li>
+    <li>Discrete Math</li>
+    <li>Mobile and Ubiquitous Computer</li>
+</ul>
+
+<h2>Programming Experience</h2>
+<ol>
+    <li>java - Relatively most experienced</li>
+    <li>python - school level</li>
+    <li>HTML - somewhat new</li>
+    <li>C - somewhat school level</li>
+</ol>
+<img src="images/Prog.png" alt="prog" id="prog">
+
+<br/>
+<br/>
+
+<div id="div2">
+    <form action="www.example.com">
+        <textarea name="message">Send a message to me...</textarea>
+        <br/>
+        <input type="submit" name="send">
+    </form>
+    <p>contact me: <a href="mailto:yjin2@wpi.edu">yjin2@wpi.edu</a></p>
+</div>
+
+
+</body>
 </html>
+
