--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <style>
         body {
-            background-image: url("images/background.jpeg");
+            background-image: url("https://image.ibb.co/hsVTSp/background.jpg");
             font-family: Courier;
         }
 
@@ -33,7 +33,7 @@
     <h1>Learn About Me, Yifei Jin</h1>
     <p>
         I am class of 2019 at <a href="https://www.wpi.edu">WPI</a>
-        <img src="images/WPI_logo.png" alt="WPI_logo" id="WPI_logo">
+        <img src="https://image.ibb.co/dsm2np/WPI_logo.png" alt="WPI_logo" id="WPI_logo">
         <br/>
         I am computer science major and data science minor<br/>
     </p>
@@ -57,7 +57,7 @@
     <li>HTML - somewhat new</li>
     <li>C - somewhat school level</li>
 </ol>
-<img src="images/Prog.png" alt="prog" id="prog">
+<img src="https://image.ibb.co/nOXa7p/Prog.png" alt="prog" id="prog">
 
 <br/>
 <br/>
